refactor: sonarLint를 이용한 코드 스멜 제거 (#108)
* refactor: sonarLint 이용한 코드 스멜 제거

* test: 테스트 코드 코드 스멜 제거

* test: 구현 계획 없는 기능 테스트 코드 제거

* test: 게시글 수정 테스트 코드 수정 및 disable 제거